fix: disable flexy header on mobile

--- a/assets/css/features/header.scss
+++ b/assets/css/features/header.scss
@@ -3,10 +3,10 @@
 
 @import "breakpoints";
 
-@media screen and (max-width: $brk-x-sidebar) {
-    header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-}
+// @media screen and (max-width: $brk-x-sidebar) {
+//     header {
+//         display: flex;
+//         flex-direction: row;
+//         justify-content: space-around;
+//     }
+// }
